--- a/index.html
+++ b/index.html
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Food Waste Reduction Project</title>
+  <title>Login</title>
+  <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
-    <div class="bg-img"></div>
     <div class="login-container">
-        <div class="login">
-            <h2 class="active">Sign In</h2>
-            <form>
-                <input type="text" class="text" name="username" placeholder="Username">
-                <input type="password" class="text" name="password" placeholder="Password">
-                <label for="checkbox-1-1" class="checkbox-label">
-                    <input type="checkbox" id="checkbox-1-1" class="custom-checkbox">
-                    Keep me Signed in
-                </label>
-            </form>
-            <button onclick="redirectToFoodFlow()" class="signin-btn">Sign In </button>
-            <a href="#" class="forgot-password">Forgot Password?</a>
-        </div>
+      <div id="main">
+        <h1 class="title">Food Flow</h1>
+        <h1>Sign In</h1>
+        <input id="email" type="text" placeholder="Email"></input>
+        <input id="password" type="password" placeholder="Password"></input>
+        <button onclick="redirectTo('/landingpage.html')" id="submit">Submit</button>
+        <p><span>or</span></p>
+        <button id="sign-up">Sign Up</button>
+      </div>
+
+      <div id="create-acct">
+        <h1>Create an Account</h1>
+        <input id="email-signup" type="text" placeholder="Email *"></input>
+        <input id="confirm-email-signup" type="email" placeholder="Confirm Email *"></input>
+        <input id="password-signup" type="password" placeholder="Password *"></input>
+        <input id="confirm-password-signup" type="password" placeholder="Confirm Password *"></input>
+        <button id="create-acct-btn">Create Account</button>
+        <button id="return-btn">Return to Login</button>
+      </div>
     </div>
-    <script>
-        function redirectToFoodFlow() {
-            window.location.href = 'food-flow.html'; // Replace with the actual filename
-        }
-    </script>
+  </div>
+  <script type="module" src="script.js"></script>
 </body>
 
 </html>
